- Refactored the way to create apis - Tracking schedule is not a different part of the process, it's done automatically by the tracked version of the scraping api - Added 2 more flags to evaluate if the content changed from the previous data and if send differences only - Cleanup swagger and classes - Renamed models and services, separated scheduling logic from the replication of the scrape action - Map of scheduled tasks are now in a ConcurrentHashMap to handle concurrent access
