# src/main/java/com/paperized/shopapi/controller/TrackingController.java
@@ -1,21 +1,22 @@
 package com.paperized.shopapi.controller;
 
 import com.paperized.generated.shopapi.api.TrackingApi;
+import com.paperized.shopapi.service.ProductTrackerScheduler;
 import com.paperized.shopapi.service.ScrapingActionService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class TrackingController implements TrackingApi {
-    private final ScrapingActionService scrapingActionService;
+    private final ProductTrackerScheduler productTrackerScheduler;
 
-    public TrackingController(ScrapingActionService scrapingActionService) {
-        this.scrapingActionService = scrapingActionService;
+    public TrackingController(ProductTrackerScheduler productTrackerScheduler) {
+        this.productTrackerScheduler = productTrackerScheduler;
     }
 
     @Override
-    public ResponseEntity<Void> unlistenTrackingWebhook(String trackingId) throws Exception {
-        scrapingActionService.unscheduleTrackingListening(trackingId);
+    public ResponseEntity<Void> unlistenTrackerWebhook(String trackerId) throws Exception {
+        productTrackerScheduler.unscheduleTracker(trackerId);
         return ResponseEntity.ok().build();
     }
 }
